feat: Bloomery selection outline, malformed structure warning.