@@ -13,9 +13,13 @@ import com.minecolonies.api.util.SoundUtils;
 import com.minecolonies.core.colony.buildings.workerbuildings.BuildingSmeltery;
 import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.ListTag;
+import net.minecraft.nbt.NbtUtils;
+import net.minecraft.nbt.Tag;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.world.InteractionResult;
+import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
@@ -24,6 +28,7 @@ import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.AABB;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -44,7 +49,12 @@ import static com.minecolonies.api.util.constant.NbtTagConstants.TAG_POS;
  */
 public class ItemBloomeryScepter extends Item implements IBlockOverlayItem
 {
-    private static final int RED_OVERLAY = 0xFFFF0000;
+    private static final int RED_OVERLAY    = 0xFFFF0000;
+    private static final int YELLOW_OVERLAY = 0xFFFFFF00;
+
+    /** Stack-NBT key: the marked bloomery positions, refreshed server-side while the wand is held so the overlay syncs. */
+    private static final String TAG_MARKS = "mctfcMarks";
+    private static final String TAG_MARK_POS = "pos";
 
     private static final String MSG_ADDED     = "com.mctfc.bloomery.scepter.added";
     private static final String MSG_REMOVED   = "com.mctfc.bloomery.scepter.removed";
@@ -128,9 +138,54 @@ public class ItemBloomeryScepter extends Item implements IBlockOverlayItem
     }
 
     /**
-     * Client-side overlay. Slice 1 renders only a <b>red box on the bound hut</b> (from the always-present client
-     * building view) so the player sees which Smeltery the wand serves; the <b>yellow marked-bloomery boxes</b> arrive
-     * with the dedicated overlay-sync packet in a later slice (the marked positions are server-only for now).
+     * Keep the marked bloomery positions fresh on the wand's <b>own stack NBT</b> while a player holds it (server-side,
+     * ~once a second). The held stack syncs to the client automatically, so {@link #getOverlayBoxes} can read the marks
+     * with no dedicated packet — sidestepping MineColonies' fragile module-runtime-id sync (see
+     * {@code docs/tfc-bloomery-smelter.md} §3b). Only writes when the set actually changed (no needless slot resyncs).
+     */
+    @Override
+    public void inventoryTick(final ItemStack stack, final Level level, final Entity entity, final int slot, final boolean selected)
+    {
+        if (level.isClientSide || !selected || level.getGameTime() % 20 != 0)
+        {
+            return;
+        }
+        final CompoundTag tag = stack.getTag();
+        if (tag == null || !tag.contains(TAG_ID))
+        {
+            return;
+        }
+        final IColony colony = IColonyManager.getInstance().getColonyByWorld(tag.getInt(TAG_ID), level);
+        if (colony == null)
+        {
+            return;
+        }
+        final IBuilding hut = colony.getServerBuildingManager().getBuilding(BlockPosUtil.read(tag, TAG_POS));
+        if (!(hut instanceof BuildingSmeltery))
+        {
+            return;
+        }
+        final BloomeryUserModule module = hut.getFirstModuleOccurance(BloomeryUserModule.class);
+        if (module == null)
+        {
+            return;
+        }
+        final ListTag marks = new ListTag();
+        for (final BlockPos pos : module.getBloomeries())
+        {
+            final CompoundTag entry = new CompoundTag();
+            entry.put(TAG_MARK_POS, NbtUtils.writeBlockPos(pos));
+            marks.add(entry);
+        }
+        if (!marks.equals(tag.getList(TAG_MARKS, Tag.TAG_COMPOUND)))
+        {
+            tag.put(TAG_MARKS, marks); // changed → resync the held stack to the client
+        }
+    }
+
+    /**
+     * Client-side overlay: a <b>red box on the bound hut</b> (from the always-present client building view) plus a
+     * <b>yellow box on each marked bloomery</b>, read from the wand's own synced stack NBT ({@link #inventoryTick}).
      */
     @NotNull
     @Override
@@ -139,10 +194,18 @@ public class ItemBloomeryScepter extends Item implements IBlockOverlayItem
         final CompoundTag tag = stack.getOrCreateTag();
         final IColonyView colony = IColonyManager.getInstance().getColonyView(tag.getInt(TAG_ID), world.dimension());
         final BlockPos hutPos = BlockPosUtil.read(tag, TAG_POS);
-        if (colony != null && colony.getClientBuildingManager().getBuilding(hutPos) != null)
+        if (colony == null || colony.getClientBuildingManager().getBuilding(hutPos) == null)
         {
-            return List.of(new OverlayBox(new AABB(hutPos), RED_OVERLAY, 0.02f, true));
+            return Collections.emptyList();
         }
-        return Collections.emptyList();
+        final List<OverlayBox> overlays = new ArrayList<>();
+        overlays.add(new OverlayBox(new AABB(hutPos), RED_OVERLAY, 0.02f, true));
+        final ListTag marks = tag.getList(TAG_MARKS, Tag.TAG_COMPOUND);
+        for (int i = 0; i < marks.size(); i++)
+        {
+            overlays.add(new OverlayBox(new AABB(NbtUtils.readBlockPos(marks.getCompound(i).getCompound(TAG_MARK_POS))),
+                    YELLOW_OVERLAY, 0.04f, true));
+        }
+        return overlays;
     }
 }
